renamed and added css and js

--- a/Examples/Example1/Styles.css
+++ b/Examples/Example1/Styles.css
@@ -1,5 +1,10 @@
+p {
+    color: green;
+    font-weight: bold;
+}
+
 #div3{
-    width: 100px;
+    width: 0px;
     height: 100px;
     background: #ffb;
     padding: 10px;
